Spider version 1.18.3
I removed all warnings and added styling to the login screen and updated the readme.